opa/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
