opa/rb-crb.yaml

# group 		    user 			     ns 	res
# ops 			    shark			     all	all
# dev 			    pewpew,shark	 app	deploy, svc, ...
# observers		  alice			     app	readonly

apiVersion: v1
kind: Namespace
metadata:
  name: app
spec: {}
status: {}
